--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
   <!-- bindinator.js Copyright ©2016-2018 Tonio Loewald -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>D&D 5th Edition Spell List</title>
   <style>
     body {
       background: #eee;
+    }
+
+    * {
+      max-width: 100%;
+      overflow-x: hidden;
     }
 
     .layout {
