--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>D&D 5th Edition Spell List</title>
   <style>
     body {
-      background: #eee;
+      background: var(--bg-color);
     }
 
     * {
